--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,26 @@ a {
     background: cyan;
 }
 
+/* whatsapp floating icon */
+.float {
+    position: fixed;
+    width: 6rem;
+    height: 6rem;
+    bottom: 4rem;
+    right: 4rem;
+    background-color: #25d366;
+    color: #fff;
+    border-radius: 5rem;
+    text-align: center;
+    font-size: 3rem;
+    box-shadow: .2rem .2rem .3rem #999;
+    z-index: 100;
+}
+
+.my-float {
+    margin-top: 1.6rem;
+}
+
 /* navbar */
 .nav-style {
     background-color: var(--primary-color);
