--- a/store/trading/css/style.css
+++ b/store/trading/css/style.css
@@ -33,7 +33,7 @@ a {
 }
 
 ::-webkit-scrollbar {
-    width: .85rem;
+    width: 0.85rem;
 }
 
 ::-webkit-scrollbar-track {
@@ -43,6 +43,27 @@ a {
 ::-webkit-scrollbar-thumb {
     border-radius: 1.5rem;
     background: var(--blue);
+}
+
+/* whatsapp floating icon */
+.float {
+    position: fixed;
+    width: 6rem;
+    height: 6rem;
+    bottom: 4rem;
+    right: 4rem;
+    margin-bottom: 6rem;
+    background-color: #25d366;
+    color: #fff;
+    border-radius: 5rem;
+    text-align: center;
+    font-size: 3rem;
+    box-shadow: 0.2rem 0.2rem 0.3rem #999;
+    z-index: 100;
+}
+
+.my-float {
+    margin-top: 1.6rem;
 }
 
 /* button cta */
@@ -93,10 +114,10 @@ a {
     width: 30rem;
     margin-top: 0;
     margin-bottom: 4rem;
-    border: .1rem solid var(--blue);
+    border: 0.1rem solid var(--blue);
     padding: 1.5rem 6rem 1.5rem;
     border-radius: 10rem;
-    box-shadow: .1rem .1rem 1rem cyan;
+    box-shadow: 0.1rem 0.1rem 1rem cyan;
 }
 .header_wrapper {
     justify-content: center;
